--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
      <a href="#">Series</a> -->
      <nav class="n">
          <div class="org"> 
-         <div class="dropdown dropdown1" >
+         <div class="dropdown">
         <button class="dropbtn">Home</button>
-        <div class="dropdown-content dropdown-content1">
+        <div class="dropdown-content">
             <a href="./index.html">Home</a>
           <a href="#">Favorite</a>
           <a href="#">Adventure</a>
           <a  href="#">Watch it again</a>
         </div>
-     <div class=" dropdown dropdown2">
+     <div class="dropdown">
         <button class="dropbtn">Movies</button>
-        <div class="dropdown-content dropdown-content2">
+        <div class="dropdown-content">
             <a href="./movies.html">All movies</a>
           <a href="#">Action</a>
           <a href="#">Horror</a>
@@ -33,9 +33,9 @@
           <a  href="#">Mystery</a>
           <a  href="#">Sci-fi</a>
         </div>
-     <div class="dropdown dropdown3">
+     <div class="dropdown">
         <button class="dropbtn">Series</button>
-        <div class="dropdown-content dropdown-content3">
+        <div class="dropdown-content">
           <a href="#">Action</a>
           <a href="#">Horror</a>
           <a href="#">Adventure</a>
